test/link/cascading-errors.out
error: cascading-errors.asm(18): Undefined symbol "Foo"
error: cascading-errors.asm(19): Undefined symbol "Bar"
error: cascading-errors.asm(16): Undefined symbol "hNonExist"
error: cascading-errors.asm(14): Undefined symbol "NonExist"
error: cascading-errors.asm(12): Undefined symbol "Foo"
error: cascading-errors.asm(10): Undefined symbol "Foo"
error: cascading-errors.asm(10): Division by 0
error: cascading-errors.asm(9): Undefined symbol "Foo"
error: cascading-errors.asm(9): Undefined symbol "Bar"
error: cascading-errors.asm(8): Undefined symbol "Bar"
Linking failed with 10 errors
